// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeColor.jsx 1`] = `
<DocumentFragment>
  <label
    class="t-checkbox t-is-checked"
  >
    <input
      checked=""
      class="t-checkbox__former"
      readonly=""
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      红点样式
    </span>
  </label>
  <div>
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(244, 67, 54);"
    />
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(233, 30, 99);"
    />
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(156, 39, 176);"
    />
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(63, 81, 181);"
    />
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(33, 150, 243);"
    />
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(3, 169, 244);"
    />
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(0, 188, 212);"
    />
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(0, 150, 136);"
    />
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(76, 175, 80);"
    />
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(139, 195, 74);"
    />
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(205, 220, 57);"
    />
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(255, 235, 59);"
    />
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(255, 193, 7);"
    />
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(255, 152, 0);"
    />
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(255, 87, 34);"
    />
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(121, 85, 72);"
    />
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(158, 158, 158);"
    />
    <span
      class="t-badge-static t-badge--dot"
      style="background-color: rgb(96, 125, 139);"
    />
  </div>
</DocumentFragment>
`;

exports[`BadgeContent.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--line t-size-l"
    >
       
    </button>
    <span
      class="t-badge--round"
    >
      new
    </span>
  </span>
</DocumentFragment>
`;

exports[`BadgeDot.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--line t-size-l"
    >
       
    </button>
    <span
      class="t-badge--dot"
      style="right: 1px; margin-top: 1px;"
    />
  </span>
  <span
    class="t-badge"
  >
    解锁新徽章
    <span
      class="t-badge--dot"
      style="right: 1px; margin-top: 1px;"
    />
  </span>
  <span
    class="t-badge"
  >
    <svg
      class="t-icon"
      style="font-size: 24px;"
      version="1.1"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8,9 C9.40504021,9 10.7254812,9.36221239 11.8730402,9.99835445 L11.885,10 L12.4565011,10.2862457 C12.7901689,10.4574447 13,10.8009441 13,11.1759685 L13,13 C13,13.5522847 12.5522847,14 12,14 L4,14 C3.44771525,14 3,13.5522847 3,13 L3,11.1762791 C3,10.8012353 3.20985249,10.4577217 3.54354665,10.2865317 L4.121,10 L4.126,9.999 L4.27379497,9.91895294 C5.38659871,9.3321599 6.6545093,9 8,9 Z M8,10 C6.51283435,10 5.13398645,10.4637634 4.00018867,11.2545577 L4,13 L12,13 L12.0003287,11.2549186 C10.8664331,10.4639045 9.48739188,10 8,10 Z M8,2.49576492 C9.65685425,2.49576492 11,3.83891067 11,5.49576492 C11,7.15261916 9.65685425,8.49576492 8,8.49576492 C6.34314575,8.49576492 5,7.15261916 5,5.49576492 C5,3.83891067 6.34314575,2.49576492 8,2.49576492 Z M8,3.49576492 C6.8954305,3.49576492 6,4.39119542 6,5.49576492 C6,6.60033441 6.8954305,7.49576492 8,7.49576492 C9.1045695,7.49576492 10,6.60033441 10,5.49576492 C10,4.39119542 9.1045695,3.49576492 8,3.49576492 Z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="t-badge--dot"
      style="right: 1px; margin-top: 1px;"
    />
  </span>
</DocumentFragment>
`;

exports[`BadgeShape.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--line t-size-l"
    >
       
    </button>
    <span
      class="t-badge--circle"
    >
      2
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--line t-size-l"
    >
       
    </button>
    <span
      class="t-badge--circle"
    >
      99
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--line t-size-l"
    >
       
    </button>
    <span
      class="t-badge--circle"
    >
      99+
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--line t-size-l"
    >
       
    </button>
    <span
      class="t-badge--round"
    >
      2
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--line t-size-l"
    >
       
    </button>
    <span
      class="t-badge--round"
    >
      99
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--line t-size-l"
    >
       
    </button>
    <span
      class="t-badge--round"
    >
      99+
    </span>
  </span>
</DocumentFragment>
`;

exports[`BadgeSize.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--line t-size-l"
    >
       
    </button>
    <span
      class="t-badge--circle"
    >
      2
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--line t-size-l"
    >
       
    </button>
    <span
      class="t-badge--circle"
    >
      99
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--line t-size-l"
    >
       
    </button>
    <span
      class="t-badge--circle"
    >
      99+
    </span>
  </span>
</DocumentFragment>
`;

exports[`BadgeSizeSmall.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--line t-size-l"
    >
       
    </button>
    <span
      class="t-badge--circle t-size-s"
    >
      2
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--line t-size-l"
    >
       
    </button>
    <span
      class="t-badge--circle t-size-s"
    >
      99
    </span>
  </span>
  <span
    class="t-badge"
  >
    <button
      class="t-button t-button--line t-size-l"
    >
       
    </button>
    <span
      class="t-badge--circle t-size-s"
    >
      99+
    </span>
  </span>
</DocumentFragment>
`;
